--- a/index.html
+++ b/index.html
@@ -68,10 +68,26 @@
         <section>
             <h2>Наша команда</h2>
                 <ul>
-                    <li><img src="./images/img1.jpg" width="270" height="260" alt="Игорь Демьяненко Product Designer"><span>Игорь Демьяненко Product Designer</span></li>
-                    <li><img src="./images/img2.jpg" width="270" height="260" alt="Ольга Репина Frontend Developer"><span>Ольга Репина Frontend Developer </span></li>
-                    <li><img src="./images/img3.jpg" width="270" height="260" alt="Николай Тарасов Marketing"><span>Николай Тарасов Marketing</span></li>
-                    <li><img src="./images/img4.jpg" width="270" height="260" alt="Михаил Ермаков UI Designer"><span>Михаил Ермаков UI Designer</span></li>
+                    <li>
+                        <img src="./images/img1.jpg" width="270" height="260" alt="Игорь Демьяненко Product Designer">
+                        <h3>Игорь Демьяненко</h3>
+                        <p>Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./images/img2.jpg" width="270" height="260" alt="Ольга Репина Frontend Developer">
+                        <h3>Ольга Репина</h3> 
+                        <p>Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./images/img3.jpg" width="270" height="260" alt="Николай Тарасов Marketing">
+                        <h3>Николай Тарасов</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./images/img4.jpg" width="270" height="260" alt="Михаил Ермаков UI Designer">
+                        <h3>Михаил Ермаков</h3>
+                        <p>UI Designer</p>    
+                    </li>
                 </ul>
         </section>
     </main>
